--- a/exercises/07-practicing-rules/styles.css
+++ b/exercises/07-practicing-rules/styles.css
@@ -1,1 +1,22 @@
 /* add your styles here */
+body {
+	background-image: url("../../.learn/assets/background-vertical.jpg?raw=true");
+	background-repeat: repeat-y;
+	padding-left: 20px;
+	font-family: "Times New Roman";
+}
+h1 {
+	font-family: "Courier";
+	color: red;
+}
+h2 {
+	text-decoration: underline;
+}
+#id1 {
+	background-color: rgba(0, 0, 0, 0.2);
+	padding: 5px;
+}
+a:hover {
+	color: green;
+	text-decoration: none;
+}
