--- a/exercises/09-rounded-image/styles.css
+++ b/exercises/09-rounded-image/styles.css
@@ -1,6 +1,13 @@
 body {
 	background: #bdbdbd;
 }
-.rounded {
-	border-radius: 100%;
+.square {
+	border-radius: 0;
+}
+img {
+	width: 50px;
+	height: 50px;
+	object-fit: cover;
+	object-position: top;
+	border-radius: 0%;
 }
